# chat-django

./: docker-compose.yml
backend/: pyproject.toml
backend/api/: models.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py
backend/chat/: settings.py  urls.py
frontend/pages/: index.tsx
